classDiagram
    class TenantsController {
        -TenantService
        +GET    api/tenants
        +GET    api/tenants/:id
        +POST   api/tenants
        +PUT    api/tenants/:id
        +DELETE api/tenants/:id
    }
    class RoutingRulesController {
        -RoutingRuleService
        +GET    api/tenants/:tenantId/rules
        +GET    api/tenants/:tenantId/rules/:id
        +POST   api/tenants/:tenantId/rules
        +PUT    api/tenants/:tenantId/rules/:id
        +DELETE api/tenants/:tenantId/rules/:id
    }
    class EventsController {
        -EventIngestionService
        +POST api/events
    }
    class NotificationLogsController {
        -EventIngestionService
        +GET api/tenants/:tenantId/logs
    }
    class ExceptionMiddleware {
        +InvokeAsync(HttpContext)
    }

    TenantsController --> TenantService
    RoutingRulesController --> RoutingRuleService
    EventsController --> EventIngestionService
    NotificationLogsController --> EventIngestionService
    ExceptionMiddleware ..> TenantNotFoundException : 404
    ExceptionMiddleware ..> RoutingRuleNotFoundException : 404
    ExceptionMiddleware ..> RateLimitExceededException : 429
    ExceptionMiddleware ..> DuplicateTenantSlugException : 409
